zapata-dx/force-app/main/default/objects/Sintoma__c/Sintoma__c.object-meta.xml
<CustomObject>
    <description>Catalogo de sintomas frecuentes. Es la raiz del arbol de diagnostico guiado. El briefing limita el alcance a 8-10 sintomas para que el retriever no se degrade.</description>
    <label>Sintoma</label>
    <nameField>
        <label>Sintoma</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sintomas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>