zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Permite retirar un sintoma del arbol sin borrar el historico.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>