zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Autoservicio_Permitido__c.field-meta.xml
<CustomField>
    <fullName>Autoservicio_Permitido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Solo verificaciones no invasivas y no criticas. Si es falso el agente se niega a guiar y deriva.</description>
    <label>Autoservicio permitido</label>
    <type>Checkbox</type>
</CustomField>