zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Codigo estable del sintoma, por ejemplo SINT_PERDIDA_POTENCIA. No cambia aunque se reescriba el texto.</description>
    <label>Codigo</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>