zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Knowledge_Article_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Id__c</fullName>
    <description>Id semantico del articulo que respalda el diagnostico de este sintoma.</description>
    <label>Id de articulo Knowledge</label>
    <length>80</length>
    <type>Text</type>
</CustomField>