zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Nivel_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Riesgo__c</fullName>
    <description>Critico significa que el agente NO guia autoservicio y escala. Briefing riesgo 2: frenos, neumatico y electrico tienen implicaciones reales de seguridad.</description>
    <label>Nivel de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
                <default>true</default>
                <label>Medio</label>
            </value>
            <value>
                <fullName>Critico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>