zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Preguntas_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Preguntas_Descarte__c</fullName>
    <description>Preguntas que el agente hace para acotar la causa antes de concluir.</description>
    <label>Preguntas de descarte</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>