zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Senales_De_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Senales_De_Alerta__c</fullName>
    <description>Condiciones ante las cuales el agente debe detener la guia y escalar de inmediato, aunque el autoservicio este permitido.</description>
    <label>Senales de alerta</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>