zapata-dx/force-app/main/default/objects/Sintoma__c/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <description>Sistema de la unidad al que pertenece el sintoma.</description>
    <label>Sistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tren motriz</fullName>
            </value>
            <value>
                <fullName>Cabina</fullName>
            </value>
            <value>
                <fullName>Frenos</fullName>
            </value>
            <value>
                <fullName>Refrigeracion</fullName>
            </value>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>