zapata-dx/force-app/main/default/objects/Sintoma__c/validationRules/Autoservicio_Requiere_Alertas.validationRule-meta.xml
<ValidationRule>
    <fullName>Autoservicio_Requiere_Alertas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Autoservicio_Permitido__c, ISBLANK(Senales_De_Alerta__c))</errorConditionFormula>
    <errorDisplayField>Senales_De_Alerta__c</errorDisplayField>
    <errorMessage>Si se permite autoservicio hay que documentar cuando el operador debe detenerse y escalar.</errorMessage>
</ValidationRule>