zapata-dx/force-app/main/default/objects/Sintoma__c/validationRules/Critico_No_Permite_Autoservicio.validationRule-meta.xml
<ValidationRule>
    <fullName>Critico_No_Permite_Autoservicio</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Nivel_Riesgo__c, &quot;Critico&quot;), Autoservicio_Permitido__c)</errorConditionFormula>
    <errorDisplayField>Autoservicio_Permitido__c</errorDisplayField>
    <errorMessage>Un sintoma de riesgo critico no puede permitir autoservicio. El agente debe negarse a guiar y escalar.</errorMessage>
</ValidationRule>