zapata-dx/force-app/main/default/objects/Sintoma__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Sistema__c</columns>
    <columns>Nivel_Riesgo__c</columns>
    <columns>Autoservicio_Permitido__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>